--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: bate
-Title: What the Package Does (One Line, Title Case)
+Title: Computes Bias-Adjusted Treatment Effect
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Deepankar", "Basu", , "dbasu@umass.edu", role = c("aut", "cre"))
+    person("Evan", "Wasner", , "ewasner@umass.edu", role = c("aut", "cre"))
+Description: The package computes quantiles of treatement effects after adjusting for the presence of omitted variable bias.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
