Created partocoef, mydisc, urrplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,18 @@ export(collect_par)
 export(cplotbias)
 export(delfplot)
 export(dplotbate)
+export(mydisc)
 export(osterbds)
 export(osterdelstar)
+export(partocoef)
+export(urrplot)
+importFrom(dplyr,"filter")
+importFrom(dplyr,"mutate")
 importFrom(ggplot2,"geom_density")
 importFrom(ggplot2,"geom_histogram")
+importFrom(ggplot2,"geom_tile")
+importFrom(ggplot2,"geom_vline")
+importFrom(ggplot2,"scale_fill_manual")
 importFrom(magrittr,"%>%")
 importFrom(stats,"as.formula")
 importFrom(stats,"lm")
