Created mycubic and get_border

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ export(collect_par)
 export(cplotbias)
 export(delfplot)
 export(dplotbate)
+export(get_border)
+export(mycubic)
 export(mydisc)
 export(osterbds)
 export(osterdelstar)
 export(partocoef)
 export(urrplot)
+importFrom(concaveman,"concaveman")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
 importFrom(ggplot2,"geom_density")
