Creted select_root and split_nurr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,18 +10,24 @@ export(mydisc)
 export(osterbds)
 export(osterdelstar)
 export(partocoef)
+export(selectroot)
+export(split_nurr)
 export(urrplot)
 importFrom(concaveman,"concaveman")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
+importFrom(dplyr,"select")
 importFrom(ggplot2,"geom_density")
 importFrom(ggplot2,"geom_histogram")
 importFrom(ggplot2,"geom_tile")
 importFrom(ggplot2,"geom_vline")
 importFrom(ggplot2,"scale_fill_manual")
 importFrom(magrittr,"%>%")
+importFrom(purrr,"pmap")
+importFrom(purrr,"pmap_dbl")
 importFrom(stats,"as.formula")
 importFrom(stats,"lm")
 importFrom(stats,"sd")
+importFrom(stats,"setNames")
 importFrom(stats,"var")
 importFrom(tidyselect,"all_of")
