--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,15 @@ export(collect_par)
 export(cplotbias)
 export(delfplot)
 export(dplotbate)
+export(expand_border)
 export(get_border)
 export(mycubic)
 export(mydisc)
 export(osterbds)
 export(osterdelstar)
+export(ovbias)
+export(ovbias_lm)
+export(ovbias_par)
 export(partocoef)
 export(selectroot)
 export(split_nurr)
@@ -16,6 +20,7 @@ export(urrplot)
 importFrom(concaveman,"concaveman")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
+importFrom(dplyr,"rowwise")
 importFrom(dplyr,"select")
 importFrom(ggplot2,"geom_density")
 importFrom(ggplot2,"geom_histogram")
@@ -25,8 +30,10 @@ importFrom(ggplot2,"scale_fill_manual")
 importFrom(magrittr,"%>%")
 importFrom(purrr,"pmap")
 importFrom(purrr,"pmap_dbl")
+importFrom(purrr,"set_names")
 importFrom(stats,"as.formula")
 importFrom(stats,"lm")
+importFrom(stats,"quantile")
 importFrom(stats,"sd")
 importFrom(stats,"setNames")
 importFrom(stats,"var")
