Working on data sets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,11 +22,19 @@ importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
 importFrom(dplyr,"rowwise")
 importFrom(dplyr,"select")
+importFrom(ggplot2,"aes")
 importFrom(ggplot2,"geom_density")
 importFrom(ggplot2,"geom_histogram")
 importFrom(ggplot2,"geom_tile")
 importFrom(ggplot2,"geom_vline")
+importFrom(ggplot2,"ggplot")
+importFrom(ggplot2,"guide_legend")
+importFrom(ggplot2,"guides")
+importFrom(ggplot2,"labs")
 importFrom(ggplot2,"scale_fill_manual")
+importFrom(ggplot2,"stat_contour_filled")
+importFrom(ggplot2,"theme_minimal")
+importFrom(latex2exp,"Tex")
 importFrom(magrittr,"%>%")
 importFrom(purrr,"pmap")
 importFrom(purrr,"pmap_dbl")
