--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ importFrom(ggplot2,"labs")
 importFrom(ggplot2,"scale_fill_manual")
 importFrom(ggplot2,"stat_contour_filled")
 importFrom(ggplot2,"theme_minimal")
-importFrom(latex2exp,"Tex")
+importFrom(latex2exp,"TeX")
 importFrom(magrittr,"%>%")
 importFrom(purrr,"pmap")
 importFrom(purrr,"pmap_dbl")
