Created examples for delfplot and dplotbate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,9 @@ importFrom(dplyr,"rowwise")
 importFrom(dplyr,"select")
 importFrom(ggplot2,"aes")
 importFrom(ggplot2,"geom_density")
+importFrom(ggplot2,"geom_function")
 importFrom(ggplot2,"geom_histogram")
+importFrom(ggplot2,"geom_hline")
 importFrom(ggplot2,"geom_tile")
 importFrom(ggplot2,"geom_vline")
 importFrom(ggplot2,"ggplot")
