--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: bate
 Title: Computes Bias-Adjusted Treatment Effect
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Deepankar", "Basu", , "dbasu@umass.edu", role = c("aut")),
-    person("Evan", "Wasner", , "ewasner@umass.edu", role = c("aut", "cre")))
+    person("Deepankar", "Basu", , "dbasu@umass.edu", role = c("aut", "cre")),
+    person("Evan", "Wasner", , "ewasner@umass.edu", role = c("aut")))
 Description: A package for computing bounds for the treatment effect 
     after adjusting for the presence of omitted variables in linear  
     econometric models. You supply the data, identify the outcome and 
